--- a/src/features/HotelCard/HotelCard.module.scss
+++ b/src/features/HotelCard/HotelCard.module.scss
@@ -8,13 +8,16 @@
   border-radius: 16px;
   box-shadow: $color-light-grey;
   transition: 0.3s;
+  overflow: hidden;
 }
 
 .hotelCardImage {
   width: 100%;
   height: 180px;
-  background-color: $color-laros-light-grey;
+  background-color: $color-placeholder;
   border-radius: 16px 16px 0 0;
+  position: relative;
+
   img {
     border-radius: 16px 16px 0 0;
   }
