--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -50,6 +50,7 @@ $color-lazur-label: #2d9cdb;
 $color-blue-label: #2f80ed;
 $color-orange: #f2994a;
 $color-box-shadow: 0px 4px 12px rgba(27, 36, 45, 0.15);
+$color-box-shadow_2: 0 18px 18px 0 rgba(0, 60, 118, 0.05);
 $color-modal-bg-blue: rgba(0, 60, 118, 0.4);
 $color-red: red;
 
