connect duration to API, add calculate API

--- a/src/pages/TripFormPage/Step1/TripDayForm/TripDayForm.module.scss
+++ b/src/pages/TripFormPage/Step1/TripDayForm/TripDayForm.module.scss
@@ -86,6 +86,9 @@
   line-height: 14px;
   white-space: pre-wrap;
 }
+.changeRoom {
+  cursor: pointer;
+}
 .sectionValue {
   position: relative;
   height: 40px;
