--- a/src/pages/VoucherPage/Step1Form/Step1Form.module.scss
+++ b/src/pages/VoucherPage/Step1Form/Step1Form.module.scss
@@ -1,4 +1,5 @@
 @use 'styles/style.scss' as *;
+
 .wrapper {
   margin-top: 80px;
   padding: 45px 193px 162px;
@@ -6,7 +7,10 @@
   flex-direction: column;
   background: $color-laros-light-grey;
   width: 100%;
+  border-radius: 0 0 16px 16px;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.07);
 }
+
 .container {
   border-radius: 16px 16px 0 0;
   position: absolute;
@@ -38,7 +42,7 @@
   flex-direction: column;
   margin-top: 83px;
 }
-.recepientSection {
+.recipientSection {
   margin-top: 62px;
 }
 .fromSection {
@@ -64,7 +68,6 @@
   padding: 13px 8px 29px;
 }
 .radioLabel {
-  font-family: Lato;
   font-size: 12px;
   font-weight: $fw-medium;
   color: $color-placeholder;
@@ -80,8 +83,6 @@
   gap: 8px;
   background-color: $color-white;
   width: 544px;
-  height: 70px;
-  padding: 8px;
 }
 
 .selectLabel {
@@ -118,17 +119,21 @@
 
 .voucherInputs {
   display: flex;
+  align-items: center;
+  font-family: $font-Lato;
+}
+.inputVoucherName,
+.price {
+  width: 100%;
+  height: 100%;
+  border: none;
+  padding-right: 25px;
+  padding-bottom: 8px;
+  border-radius: 0;
 }
 .input {
   font-weight: $fw-medium;
   border-radius: 0;
   height: 55px;
-  padding: 8px;
-}
-
-.price {
-  font-weight: $fw-medium;
-  border-radius: 0;
-  height: 70px;
-  padding: 8px;
+  padding: 8px 25px 8px 8px;
 }
