--- a/src/components/InputCalendar/CalendarLeft/InputCalendarLeft.module.scss
+++ b/src/components/InputCalendar/CalendarLeft/InputCalendarLeft.module.scss
@@ -18,12 +18,14 @@
 }
 
 .textDate {
-  padding: 8px;
   width: 80%;
   font-size: 12px;
   text-align: center;
   display: flex;
   align-items: center;
+  input {
+    text-align: left;
+  }
 }
 
 .pencilIcon {
@@ -31,4 +33,8 @@
   margin-right: 8px;
   display: flex;
   align-items: center;
+}
+
+.error {
+  outline: 1px solid red;
 }
