--- a/src/components/InputCalendar/CalendarRight/InputCalendarRight.module.scss
+++ b/src/components/InputCalendar/CalendarRight/InputCalendarRight.module.scss
@@ -17,6 +17,7 @@
   display: flex;
   align-items: center;
   justify-content: end;
+  margin-right: 8px;
 }
 
 .calendarIcon {
@@ -26,4 +27,8 @@
   margin-left: auto;
   display: flex;
   align-items: center;
+}
+
+.error {
+  outline: 1px solid red;
 }
