Fix  travel tab (#92)
* fix travel tab

* add__translate

* add__all_translates

* fix trip page

* final__add_translate

* final_version

* fix trip page

* fix travel tab

* fix travel tab

* fix travel tab

* fix travel tab

* fix pr edits

* fix pr edits

* fix trip page

* maeby end travel tab

* maeby end travel tab

Co-authored-by: Dzianis Martusin <front2@breezzor.ru>
Co-authored-by: Baiel <hariswolendemord@gmail.com>
Co-authored-by: FeNRiR <germes955@gamail.com>
Co-authored-by: Martin Lee <72463518+martinLjs@users.noreply.github.com>

--- a/src/pages/TripPage/Tab/InsiderTips/InsiderTips.module.scss
+++ b/src/pages/TripPage/Tab/InsiderTips/InsiderTips.module.scss
@@ -6,7 +6,7 @@
 }
 
 .title {
-  font-weight: 700;
+  font-weight: $fw-bold;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
@@ -14,7 +14,7 @@
 }
 
 .description {
-  font-weight: 400;
+  font-weight: $fw-regular;
   font-size: 12px;
   line-height: 20px;
   margin-bottom: 80px;
