--- a/src/pages/TripPage/Tab/RelatedTours/RelatedTours.module.scss
+++ b/src/pages/TripPage/Tab/RelatedTours/RelatedTours.module.scss
@@ -3,6 +3,10 @@
 .wrapper {
   padding: 80px 64px 160px;
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
-  gap: 24px;
+  gap: 20px;
+}
+.tripCard {
+  width: 32%;
 }
