--- a/src/pages/TripPage/TripPageIntro/tripPageIntro.module.scss
+++ b/src/pages/TripPage/TripPageIntro/tripPageIntro.module.scss
@@ -1,13 +1,14 @@
 @use 'styles/style' as *;
 
-.hotelIntro {
+.pageIntro {
   background-color: $color-light-grey;
-  margin: 80px;
   border-radius: 16px;
   display: flex;
+  width: 100%;
+  min-height: 540px;
   box-shadow: 0 4px 12px 0 rgba(0, 60, 118, 0.05);
   position: relative;
-  z-index: 1;
+  z-index: 2;
 }
 .left {
   width: 65%;
@@ -26,12 +27,13 @@
     color: $color-yellow !important;
   }
 }
-.address {
-  font-size: 16px;
+.price {
+  font-size: 20px;
   font-weight: $fw-regular;
-  line-height: 19px;
+  line-height: 24px;
+  text-align: left;
   color: $color-laros-dark-grey;
-  margin: 17px 0 8px;
+  margin: 17px 0;
 }
 .name {
   font-size: 48px;
@@ -40,9 +42,23 @@
   color: $color-bg-black;
 }
 .description {
-  margin-top: 16px;
+  font-size: 12px;
+  font-weight: $fw-regular;
+  line-height: 20px;
+  text-align: left;
+  color: $color-bg-black;
+  margin-bottom: 17px;
 }
-
+.seeMore {
+  font-weight: $fw-bold;
+  font-size: 12px;
+  line-height: 14px;
+  color: $color-laros-dark-grey;
+  cursor: pointer;
+  display: inline-block;
+  margin-top: 12px;
+  margin-bottom: 16px;
+}
 .map {
   width: 100%;
   height: 425px;
