some fixes in FlightRequestPage (#99)
* some fixes in FlightRequestPage

* preparation to send form on api

* fix typescript errors

--- a/src/pages/FlightRequestPage/FlightRequestPage.module.scss
+++ b/src/pages/FlightRequestPage/FlightRequestPage.module.scss
@@ -14,11 +14,6 @@
 .inputCalendarCustom {
   min-width: 49%;
   height: 70px;
-  width: 411px;
-
-  [class$='pencilIcon'] {
-    margin-right: 32px;
-  }
 }
 
 .radio {
@@ -158,6 +153,10 @@
 
   [class$='-menu'] {
     z-index: 1000;
+  }
+
+  [class$='-DropdownIndicator'] {
+    padding-bottom: 10px;
   }
 }
 
