--- a/src/features/TripCard/TripCard.module.scss
+++ b/src/features/TripCard/TripCard.module.scss
@@ -1,7 +1,7 @@
 @use 'styles/style.scss' as *;
 
 .wrapper {
-  min-width: 370px;
+  width: 100%;
   border-radius: 16px;
   background-color: $color-white;
   min-height: 590px;
