--- a/src/features/TripCard/TripCard.module.scss
+++ b/src/features/TripCard/TripCard.module.scss
@@ -47,6 +47,7 @@
   font-size: 12px;
   line-height: 14px;
   text-transform: capitalize;
+  text-align: left;
   color: $color-laros-dark-grey;
 }
 
