--- a/src/features/TripCard/TripCard.module.scss
+++ b/src/features/TripCard/TripCard.module.scss
@@ -51,7 +51,8 @@
   color: $color-laros-dark-grey;
 }
 
-.mainHead, .mainCenter{
+.mainHead,
+.mainCenter {
   padding: 16px 24px;
   border-bottom: 1px solid $color-laros-light-grey;
   display: flex;
@@ -75,7 +76,7 @@
   margin: 4px 0;
 }
 
-.mainFooter{
+.mainFooter {
   display: flex;
   padding: 16px 24px;
   align-items: center;
@@ -94,6 +95,8 @@
   width: 100%;
   height: 100%;
   border-radius: 0;
+  margin: 0;
+  padding: 0;
 }
 
 // wide horizontal card styles
