--- a/src/pages/DestinationPage/DestinationPage.module.scss
+++ b/src/pages/DestinationPage/DestinationPage.module.scss
@@ -18,3 +18,11 @@
 .arrow {
   margin-right: 4px;
 }
+
+.layoutWrapper {
+  max-width: 1280px;
+  box-shadow: 0px 4px 12px rgba(27, 36, 45, 0.15);
+  border-radius: 0px 0px 16px 16px;
+  margin: auto;
+  margin-bottom: 120px;
+}
