--- a/src/pages/FlightRequestPage/FlightRequestPage.module.scss
+++ b/src/pages/FlightRequestPage/FlightRequestPage.module.scss
@@ -194,12 +194,15 @@
   margin-right: 16px;
 }
 
-.footerDescr {
-  width: 254px;
+.privacyPolicy {
+  width: 350px;
   font-size: 12px;
   line-height: 14px;
   color: $color-range-bg;
   font-weight: $fw-light;
+  a {
+    color: $color-primary-black;
+  }
 }
 
 .termsButton {
