--- a/src/pages/SpecialOffersPage/SpecialOffersPage.module.scss
+++ b/src/pages/SpecialOffersPage/SpecialOffersPage.module.scss
@@ -6,12 +6,10 @@
   border: 1px solid $color-white;
   border-radius: 16px;
   box-shadow: 0 4px 4px 0 $color-shadow;
-  margin-top: 40px;
   padding: 80px 65px 0;
-  margin-bottom: 80px;
   min-height: 600px;
   max-width: 1280px;
-  margin: auto;
+  margin: 40px auto 80px;
 }
 
 .title {
