--- a/src/features/DestinationHotels/Sorting/Sorting.module.scss
+++ b/src/features/DestinationHotels/Sorting/Sorting.module.scss
@@ -6,9 +6,12 @@
   gap: 8px;
   align-items: center;
   margin-bottom: 16px;
-
-  .select {
-    width: 100%;
+}
+.select,
+.accommodationSelect,
+.selectDirection {
+  width: 100%;
+  [class$='-control'] {
     background-color: $color-white;
   }
 }
@@ -23,7 +26,7 @@
 }
 
 .accommodationSelect {
-  max-width: 160px;
+  max-width: 200px;
   width: 100%;
 }
 
@@ -41,25 +44,14 @@
 
   .tags {
     display: flex;
-    align-items: center;
     box-sizing: content-box;
     gap: 8px;
     max-width: 560px;
-    overflow-x: auto;
     font-weight: $fw-medium;
     padding-bottom: 4px;
-
-    &::-webkit-scrollbar {
-      height: 8px;
-    }
-    &::-webkit-scrollbar-track {
-      background: $color-modal-header;
-    }
-    &::-webkit-scrollbar-thumb {
-      background-color: $color-laros-dark-grey;
-      border-radius: 24px;
-      border: 1px solid $color-light-grey;
-    }
+  }
+  .tag {
+    padding-top: 4px;
   }
 }
 
@@ -69,6 +61,20 @@
   border: none;
   padding-left: 0;
   list-style-type: none;
+  overflow-x: auto;
+  align-items: center;
+
+  &::-webkit-scrollbar {
+    height: 8px;
+  }
+  &::-webkit-scrollbar-track {
+    background: $color-modal-header;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $color-laros-dark-grey;
+    border-radius: 24px;
+    border: 1px solid $color-light-grey;
+  }
 }
 
 .tab {
