--- a/src/features/DestinationLayout/DestinationLayout.module.scss
+++ b/src/features/DestinationLayout/DestinationLayout.module.scss
@@ -4,12 +4,14 @@
   display: flex;
   // padding: 0 80px;
 }
+
 .sidebar {
   background-color: $color-light-grey;
   min-width: 240px;
   max-width: 240px;
   border-radius: 0 0 0 16px;
 }
+
 .list {
   max-height: 264px;
   overflow-y: scroll;
@@ -19,15 +21,18 @@
     display: none;
   }
 }
+
 .description {
   padding: 70px 16px 0;
   font-weight: $fw-medium;
   display: flex;
   flex-direction: column;
 }
+
 .select {
   margin-bottom: 32px;
 }
+
 .select,
 .more {
   cursor: pointer;
@@ -36,6 +41,7 @@
   color: $color-placeholder;
   font-size: 12px;
 }
+
 .title {
   margin-bottom: 12px;
   font-size: 32px;
@@ -43,6 +49,7 @@
   overflow-wrap: break-word;
   font-weight: $fw-semibold;
 }
+
 .text {
   margin-bottom: 12px;
   font-size: 12px;
@@ -59,5 +66,6 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 100%;
+  padding: 55px 0 0 63px;
+  width: calc(100% - 240px);
 }
