--- a/src/features/DestinationHotels/Sorting/Sorting.module.scss
+++ b/src/features/DestinationHotels/Sorting/Sorting.module.scss
@@ -7,12 +7,36 @@
   align-items: center;
   margin-bottom: 16px;
 }
+
 .select,
 .accommodationSelect,
 .selectDirection {
   width: 100%;
+
   [class$='-control'] {
     background-color: $color-white;
+    flex-wrap: nowrap;
+  }
+
+  [class$='-ValueContainer'] {
+    flex-wrap: nowrap;
+    overflow: hidden;
+    overflow-x: auto;
+    &::-webkit-scrollbar {
+      height: 5px;
+    }
+    &::-webkit-scrollbar-track {
+      background: $color-white;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: $color-laros-dark-grey;
+      border-radius: 24px;
+      border: 1px solid $color-light-grey;
+    }
+  }
+
+  [class$='-multiValue'] {
+    flex-shrink: 0;
   }
 }
 
