--- a/src/features/DestinationLayout/DestinationLayout.module.scss
+++ b/src/features/DestinationLayout/DestinationLayout.module.scss
@@ -2,7 +2,6 @@
 
 .container {
   display: flex;
-  // padding: 0 80px;
 }
 
 .sidebar {
@@ -10,6 +9,8 @@
   min-width: 240px;
   max-width: 240px;
   border-radius: 0 0 0 16px;
+  position: relative;
+  z-index: 100;
 }
 
 .list {
