--- a/src/features/Footer/Footer.module.scss
+++ b/src/features/Footer/Footer.module.scss
@@ -1,3 +1,5 @@
+@import '/src/styles/theme/breakpoints.scss';
+
 .footer {
   width: 100%;
   border-top: 1px solid #e1e2e3;
@@ -150,5 +152,48 @@
     font-size: 10px;
     line-height: 12px;
     text-align: right;
+  }
+}
+
+@include mobile {
+  .textInfo {
+    margin: 0;
+  }
+  .content {
+    flex-direction: column;
+  }
+  .navigation {
+    height: 100%;
+    padding: 10px;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .navList {
+    padding: 0;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .socialList {
+    flex-direction: column;
+  }
+  .listInfo {
+    padding-right: 20px;
+  }
+  .about {
+    margin-left: 30px;
+  }
+  .subtitleFooter {
+    span {
+      font-size: 10px;
+    }
+  }
+}
+
+@include mobile-tablet {
+  .partners {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 51.2px 20px 20px;
   }
 }
