--- a/src/features/Header/Header.module.scss
+++ b/src/features/Header/Header.module.scss
@@ -1,3 +1,6 @@
+@use 'styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
+
 .header {
   padding: 0 138px;
   display: flex;
@@ -133,6 +136,90 @@
     margin-top: -7px;
   }
 }
-.logo{
+.logo {
   cursor: pointer;
+}
+
+/* General */
+.hamburger {
+  position: relative;
+  width: 15px;
+  height: 3px;
+  background: $color-primary;
+  box-shadow: 0 2px 5px $color-layout-dark-blue;
+  transition: 0.5s;
+  border-radius: 30px;
+  z-index: 9999999;
+}
+
+.hamburger:before,
+.hamburger:after {
+  content: '';
+  position: absolute;
+  width: 10px;
+  height: 3px;
+  background: $color-primary;
+  box-shadow: 0 2px 5px $color-layout-dark-blue;
+  transition: 0.5s;
+}
+.hamburger:before {
+  width: 20px;
+  top: -12px;
+  border-radius: 30px;
+}
+
+.hamburger:after {
+  top: 12px;
+  border-radius: 30px;
+}
+.hamburgerMenuClose {
+  width: 15px;
+  box-shadow: 0 2px 5px $color-light-grey;
+  background: $color-white;
+}
+.hamburgerMenuClose::after,
+.hamburgerMenuClose::before {
+  box-shadow: 0 2px 5px $color-light-grey;
+  background: $color-white;
+}
+.hamburgerMenuClose::after {
+  width: 20px;
+}
+.hamburgerMenuClose::before {
+  width: 10px;
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  transition: all 0.3s ease-in-out;
+  transform: translateX(100%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 99999;
+}
+
+.menuActive {
+  transform: translateX(0%);
+}
+
+@include mobile-tablet {
+  .header {
+    padding: 0 69px;
+  }
+}
+
+@include mobile {
+  .header {
+    padding: 0 20px;
+  }
+  .logo {
+    position: absolute;
+    left: 43%;
+  }
 }
