--- a/src/features/Header/Header.module.scss
+++ b/src/features/Header/Header.module.scss
@@ -9,6 +9,13 @@
   background-color: hsl(210, 25%, 98%);
   height: 72px;
   transition: 0.1s;
+  @include mobile-tablet {
+    padding: 0 69px;
+    justify-content: center;
+  }
+  @include mobile {
+    padding: 0 20px;
+  }
 }
 
 .collapsed {
@@ -142,14 +149,15 @@
 
 /* General */
 .hamburger {
-  position: relative;
+  position: absolute;
+  left: 20px;
   width: 15px;
   height: 3px;
   background: $color-primary;
   box-shadow: 0 2px 5px $color-layout-dark-blue;
   transition: 0.5s;
   border-radius: 30px;
-  z-index: 9999999;
+  z-index: 9999;
 }
 
 .hamburger:before,
@@ -201,25 +209,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 99999;
+  z-index: 9999;
 }
 
 .menuActive {
   transform: translateX(0%);
-}
-
-@include mobile-tablet {
-  .header {
-    padding: 0 69px;
-  }
-}
-
-@include mobile {
-  .header {
-    padding: 0 20px;
-  }
-  .logo {
-    position: absolute;
-    left: 43%;
-  }
 }
