--- a/src/components/InputCalendar/CalendarDouble/calendarDouble.module.scss
+++ b/src/components/InputCalendar/CalendarDouble/calendarDouble.module.scss
@@ -12,6 +12,14 @@
   font-weight: $fw-regular;
   line-height: 14px;
   text-align: right;
+
+  @include mobile-tablet {
+    flex-direction: column;
+    align-items: start;
+    padding: 3px;
+    text-align: left;
+    height: 100%;
+  }
 }
 
 .label {
@@ -20,10 +28,19 @@
   align-items: center;
   color: $color-placeholder;
 }
+
+.text {
+  @include mobile {
+    width: 76px;
+    padding-top: 5px;
+  }
+}
+
 .calendarIcon {
   position: absolute;
   height: 100%;
-  right: 10px;
+  right: 0;
   display: flex;
   align-items: center;
+
 }
