--- a/src/pages/HotelPage/HotelIntro/HotelIntro.module.scss
+++ b/src/pages/HotelPage/HotelIntro/HotelIntro.module.scss
@@ -8,13 +8,26 @@
   box-shadow: 0 4px 12px 0 rgba(0, 60, 118, 0.05);
   position: relative;
   z-index: 1;
+
+  @include mobile{
+    flex-direction: column;
+  }
 }
 .left {
   width: 65%;
   padding: 56px;
+
+  @include mobile-tablet{
+    width: 100%;
+    padding: 10px;
+  }
 }
 .right {
   width: 40%;
+
+  @include mobile{
+    width: 100%;
+  }
 
   img {
     border-radius: 0 16px 0 0;
@@ -23,6 +36,10 @@
 .rating {
   span {
     margin-right: 10px;
+
+    @include mobile{
+      margin-right: 0;
+    }
   }
 }
 .address {
@@ -37,6 +54,17 @@
   font-weight: $fw-bold;
   line-height: 58px;
   color: $color-bg-black;
+
+  @include laptop{
+    font-size: 35px;
+  }
+  @include mobile-tablet{
+    font-size: 25px;
+  }
+  @include mobile{
+    font-size: 16px;
+    line-height: 25px;
+  }
 }
 .description {
   margin-top: 16px;
@@ -45,6 +73,10 @@
   overflow: hidden;
   overflow-y: scroll;
   margin-bottom: 20px;
+
+  @include mobile-tablet{
+    padding-right: 0;
+  }
 }
 
 .map {
