--- a/src/pages/FlightRequestPage/FlightRequestPage.module.scss
+++ b/src/pages/FlightRequestPage/FlightRequestPage.module.scss
@@ -3,17 +3,31 @@
 .wrapper {
   font-family: $font-Lato;
   padding-top: 16px;
+
+  @media screen and (max-width: 850px) {
+    padding-top: 0;
+  }
 }
 
 .row {
   display: flex;
   justify-content: space-between;
   margin-bottom: 16px;
+
+  @media screen and (max-width: 850px) {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
 }
 
 .inputCalendarCustom {
   min-width: 49%;
   height: 70px;
+
+  @media screen and (max-width: 850px) {
+    width: 100%;
+    margin-bottom: 15px;
+  }
 }
 
 .radio {
@@ -28,13 +42,21 @@
   font-weight: $fw-medium;
   color: $color-checkbox-gray;
   margin-bottom: 15px;
+
+  @media screen and (max-width: 850px) {
+    margin-bottom: 10px;
+  }
 }
 
-.counterRow {
-  padding-top: 24px;
-  justify-content: start;
-  margin-bottom: 68px;
-  width: 49%;
+@media screen and (max-width: 850px) {
+  .radioInput {
+    display: flex;
+    flex-direction: column;
+
+    [class*='radio'] {
+      margin-bottom: 15px;
+    }
+  }
 }
 
 .counterRow div:first-child {
@@ -99,6 +121,10 @@
   [type$='email'] {
     font-weight: $fw-regular;
   }
+
+  @media screen and (max-width: 850px) {
+    width: 100%;
+  }
 }
 
 .input input::placeholder {
@@ -114,6 +140,11 @@
 .selectWrapper {
   position: relative;
   width: 49%;
+
+  @media screen and (max-width: 850px) {
+    width: 100%;
+    margin-bottom: 15px;
+  }
 }
 
 .selectLabel {
@@ -183,11 +214,20 @@
     padding-bottom: 12px;
     background-color: $color-light-grey;
   }
+
+  @media screen and (max-width: 850px) {
+    margin-bottom: 30px;
+  }
 }
 
 .footer {
   display: flex;
   margin-bottom: 106px;
+
+  @media screen and (max-width: 850px) {
+    flex-direction: column-reverse;
+    margin-bottom: 20px;
+  }
 }
 
 .submitButton {
@@ -200,8 +240,14 @@
   line-height: 14px;
   color: $color-range-bg;
   font-weight: $fw-light;
+
   a {
     color: $color-primary-black;
+  }
+
+  @media screen and (max-width: 850px) {
+    width: 100%;
+    margin-bottom: 15px;
   }
 }
 
@@ -226,6 +272,7 @@
   margin-top: 20px;
   width: calc(100% / 2 - 18px);
 }
+
 .checkboxLabel {
   font-size: 12px;
   font-weight: $fw-medium;
@@ -233,6 +280,7 @@
   padding-left: 16px;
   margin-bottom: 15px;
 }
+
 .checkbox {
   display: flex;
   width: 100%;
@@ -253,10 +301,12 @@
     span:nth-child(2) {
       order: 2;
       border-radius: 50%;
+
       &:before {
         border-radius: 50%;
       }
     }
+
     span:nth-child(3) {
       font-size: 14px;
       font-weight: $fw-medium;
@@ -265,6 +315,7 @@
     }
   }
 }
+
 .counterRow {
   display: flex;
   flex-direction: row;
@@ -272,10 +323,25 @@
   justify-content: start;
   margin-bottom: 68px;
   padding: 0;
+
+  @media screen and (max-width: 1024px) {
+    width: 70%;
+  }
+
+  @media screen and (max-width: 850px) {
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 30px;
+  }
 }
 
 .counterRow div:first-child {
   margin-right: 24px;
+
+  @media screen and (max-width: 850px) {
+    margin-right: 15px;
+    margin-bottom: 15px;
+  }
 }
 
 .travelDurationCounter {
@@ -286,6 +352,7 @@
     text-align: right;
     padding-right: 100px;
   }
+
   .dayString {
     position: absolute;
     font-size: 14px;
@@ -295,11 +362,14 @@
     z-index: 1;
   }
 }
+
 .selectCHF {
   width: 411px;
+
   input {
     margin-bottom: 4px;
   }
+
   .inputLabel {
     margin-bottom: 10px;
     font-size: 12px;
