--- a/src/pages/TripFormPage/Sidebar/Sidebar.module.scss
+++ b/src/pages/TripFormPage/Sidebar/Sidebar.module.scss
@@ -14,6 +14,7 @@
   background-color: $color-lazur;
   border-radius: 0 16px 0 0;
   margin-bottom: 16px;
+  overflow: hidden;
 }
 .bgWhite {
   background-color: white;
