--- a/src/features/Header/MobileMenu/MobileMenu.module.scss
+++ b/src/features/Header/MobileMenu/MobileMenu.module.scss
@@ -7,6 +7,8 @@
   align-items: flex-start;
   background-color: $color-layout-blue;
   width: 100%;
+  height: 100%;
+  top: 0;
   transform: translateX(-110%);
   transition: 0.3s;
   padding: 100px 70px;
@@ -19,6 +21,9 @@
   transition: 0.3s;
   transform: translateX(0);
   z-index: 8888;
+  @media (max-height: 620px){
+    padding: 20px 70px;
+  }
 }
 
 .logo {
@@ -71,8 +76,7 @@
   }
 }
 .subNav {
-  width: 200px;
-  position: absolute;
+  width: 100%;
   top: 250px;
   left: auto;
   display: flex;
