--- a/src/components/SliderGalery/SliderGalery.module.scss
+++ b/src/components/SliderGalery/SliderGalery.module.scss
@@ -1,7 +1,10 @@
+@use 'styles/style' as *;
+
 .slider {
   padding: 0 80px;
   box-sizing: border-box;
   overflow: hidden;
+
   & > div {
     overflow: visible;
   }
@@ -10,5 +13,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  @include mobile-tablet {
+    padding: 0;
   }
 }
