--- a/src/features/Review/Review.module.scss
+++ b/src/features/Review/Review.module.scss
@@ -1,4 +1,5 @@
 @use '/src/styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
 
 .review {
   box-sizing: border-box;
@@ -13,6 +14,10 @@
 
   &::-webkit-scrollbar {
     display: none;
+  }
+
+  @include mobile-tablet {
+    min-height: unset;
   }
 }
 
