--- a/src/pages/CareerPage/CareerPage.module.scss
+++ b/src/pages/CareerPage/CareerPage.module.scss
@@ -1,8 +1,13 @@
 @use '/src/styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
 
 .wrapper {
   padding: 80px 80px 160px 80px;
   font-family: $font-Lato;
+
+  @include mobile-tablet {
+    padding: 20px;
+  }
 }
 
 .title {
@@ -10,6 +15,11 @@
   text-align: center;
   font-size: 40px;
   line-height: 48px;
+
+  @include mobile-tablet {
+    font-size: 30px;
+    margin-bottom: 15px;
+  }
 }
 
 .description {
@@ -18,6 +28,11 @@
   text-align: center;
   font-size: 12px;
   line-height: 20px;
+
+  @include mobile-tablet {
+    width: 100%;
+    margin-bottom: 30px;
+  }
 }
 
 .cards {
@@ -25,6 +40,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
 .noVacancies {
   margin: auto;
 }
