--- a/src/pages/CareerPage/JobCard/JobCard.module.scss
+++ b/src/pages/CareerPage/JobCard/JobCard.module.scss
@@ -1,10 +1,17 @@
 @use '/src/styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
 
 .cardWrapper {
   width: 49%;
   margin-bottom: 32px;
   font-family: $font-Lato;
   padding: 32px 40px;
+
+  @include mobile-tablet {
+    width: 100%;
+    padding: 0;
+    font-size: 14px;
+  }
 }
 
 .title {
@@ -22,9 +29,16 @@
 }
 
 .buttons {
+  padding-top: 25px;
   display: flex;
 }
 
 .applyButton {
   margin-right: 20px;
+}
+
+.infoButton {
+  @include mobile-tablet {
+    padding: 0;
+  }
 }
