--- a/src/pages/Team/Team.module.scss
+++ b/src/pages/Team/Team.module.scss
@@ -1,17 +1,37 @@
 @use '/src/styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
 
 .wrapper {
   max-width: 1320px;
   margin: 80px auto;
+
+  @include mobile-tablet {
+    padding: 0 15px;
+    margin: 20px auto;
+  }
 }
 
 .text {
   text-align: center;
   margin: 0 0 51px 0;
+
+  @include mobile-tablet {
+    margin-bottom: 20px;
+  }
 }
 
 .title {
   margin: 0 0 40px 0;
+
+  @include tablet {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  @include mobile {
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
 }
 
 .desc {
@@ -26,4 +46,10 @@
   display: flex;
   flex-wrap: wrap;
   gap: 37px;
+  justify-content: center;
+
+  @media (max-width: 560px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
