--- a/src/pages/TestimonialsPage/TestimonialsPage.module.scss
+++ b/src/pages/TestimonialsPage/TestimonialsPage.module.scss
@@ -1,9 +1,18 @@
 @use '/src/styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
 
 .page {
   margin-top: 80px;
   text-align: center;
   color: $color-bg-black;
+
+  @include mobile {
+    margin-top: 20px;
+  }
+
+  @include tablet {
+    margin-top: 40px;
+  }
 }
 
 .title {
@@ -11,6 +20,16 @@
   font-weight: $fw-semibold;
   font-size: 40px;
   line-height: 48px;
+
+  @include tablet {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  @include mobile {
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
 }
 
 .description {
@@ -19,9 +38,34 @@
   width: 50%;
   line-height: 20px;
   margin: 0 auto 80px;
+
+  @include mobile {
+    width: 100%;
+    margin: 0 0 20px 0;
+    padding: 0 15px;
+  }
+
+  @include tablet {
+    width: 60%;
+    margin: 0 auto 20px;
+    padding: 0 15px;
+  }
 }
+
 .slider {
   width: 85%;
   margin: 0 auto 200px;
   padding: 0 30px;
+}
+
+@include mobile-tablet {
+  .slider {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+    [class*='swiperButtonNext'] {
+      right: 0;
+    }
+  }
 }
