--- a/src/pages/TripFormPage/TripFormPage.module.scss
+++ b/src/pages/TripFormPage/TripFormPage.module.scss
@@ -27,17 +27,19 @@
 .content {
   width: 1281px;
   background-color: $color-laros-light-grey;
-  box-shadow: 0px 4px 4px rgba(0, 60, 118, 0.15);
+  box-shadow: 0 4px 4px rgba(0, 60, 118, 0.15);
   border-radius: 16px;
   margin: auto;
   transform: translateY(-400px);
   display: flex;
 }
+
 .form {
   width: 869px;
   background-color: $color-white;
   border-radius: 16px 0 0 16px;
 }
+
 .header {
   height: 48px;
   display: flex;
@@ -45,11 +47,13 @@
   padding: 14px 40px 14px 46px;
   background-color: $color-laros-light-grey;
   border-radius: 16px 0 0 0;
+
   & > div {
     display: flex;
     cursor: pointer;
   }
 }
+
 .title {
   margin-left: 14px;
   font-size: 12px;
@@ -57,6 +61,7 @@
   line-height: 20px;
   color: $color-primary-black;
 }
+
 .reset {
   margin-left: 10px;
   font-size: 12px;
@@ -69,20 +74,24 @@
   display: flex;
   align-items: center;
 }
+
 .crumbStep {
   display: flex;
   cursor: pointer;
 }
+
 .activeCrumb {
   cursor: unset;
 
   & .stepIndex {
     background-color: $color-bg-black;
   }
+
   & .stepName {
     color: $color-bg-black;
   }
 }
+
 .stepIndex {
   height: 16px;
   width: 16px;
@@ -104,6 +113,7 @@
   margin-left: 4px;
   color: $color-placeholder;
 }
+
 .crumbStep {
   margin-left: 12px;
   font-size: 12px;
@@ -111,12 +121,15 @@
   line-height: 14px;
   color: $color-laros-dark-grey;
 }
+
 .arrow {
   margin: 0 30px;
 }
+
 .info {
   padding: 24px 0 24px 0;
 }
+
 .infoTitle {
   padding-left: 80px;
   font-size: 32px;
@@ -124,6 +137,7 @@
   line-height: 38px;
   margin-bottom: 4px;
 }
+
 .infoLocation {
   padding-left: 80px;
   font-size: 12px;
@@ -132,6 +146,7 @@
   color: $color-placeholder;
   margin-bottom: 24px;
 }
+
 .infoDescription {
   padding: 0 80px;
   min-height: 68px;
