Feat  adaptive homepage (#147)
* add adaptive homepage

* add adaptive homepage

* fix adaptive slider

Co-authored-by: Martin Lee <72463518+martinLjs@users.noreply.github.com>

--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -59,3 +59,10 @@
 .swiperButtonPrev::after {
   display: none;
 }
+
+.swiperSlide {
+  @include mobile {
+    display: flex;
+    justify-content: center;
+  }
+}
