--- a/src/pages/HomePage/Explore/Explore.module.scss
+++ b/src/pages/HomePage/Explore/Explore.module.scss
@@ -18,6 +18,13 @@
   padding-bottom: 80px;
   padding-right: 15px;
   padding-left: 15px;
+  @include mobile {
+    grid-template-columns: repeat(3, 1fr);
+    padding-bottom: 40px;
+  }
+  @media (max-width: 460px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .title {
@@ -29,10 +36,12 @@
 
 .subtitle {
   padding-bottom: 40px;
-
   font-weight: $fw-regular;
   font-size: 12px;
   opacity: 0.6;
+  @include mobile {
+    padding: 0 20px 40px 20px;
+  }
 }
 
 .item {
@@ -52,6 +61,10 @@
   background-position: center;
   border-radius: 17px;
   background-size: 100% 100%;
+  @include mobile {
+    height: 150px;
+    max-width: 200px;
+  }
 }
 
 .itemName {
