--- a/src/pages/HomePage/Main/Main.module.scss
+++ b/src/pages/HomePage/Main/Main.module.scss
@@ -1,4 +1,5 @@
 @use '/src/styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
 
 .main {
   width: 100vw;
@@ -10,20 +11,36 @@
   color: $color-white;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+
+  @include mobile {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 .main_blur {
   width: 50%;
-  height: 810px;
+  height: 770px;
   background-color: rgba(0, 60, 118, 0.25);
   backdrop-filter: blur(4px);
   position: absolute;
   top: 0;
+  @include mobile-tablet {
+    width: 60%;
+  }
+
+  @include mobile {
+    height: 445px;
+    width: 100%;
+  }
 }
 
 .main_wrapper {
   width: 100%;
   height: 100%;
+
+  @include mobile {
+    padding-right: 20px;
+  }
 }
 
 .main_text {
@@ -35,6 +52,13 @@
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   z-index: 100;
+  @include mobile-tablet {
+    padding-left: 20px;
+    max-width: 450px;
+  }
+  @include mobile {
+    margin-left: 0;
+  }
 }
 
 .title {
@@ -42,6 +66,13 @@
   font-size: 56px;
   line-height: 67px;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  @include mobile-tablet {
+    font-size: 46px;
+  }
+  @include mobile {
+    line-height: 50px;
+    font-size: 33px;
+  }
 }
 
 .subtitle {
@@ -62,6 +93,9 @@
   height: 100%;
   position: relative;
   margin-left: auto;
+  @include mobile {
+    width: 100%;
+  }
 }
 
 .play_icon {
@@ -73,6 +107,11 @@
   padding: 13px 13px 10px 17px;
   border-radius: 100%;
   cursor: pointer;
+
+  @include mobile {
+    left: 50%;
+    top: 0;
+  }
 }
 
 .commentsWrapper {
