--- a/src/pages/HomePage/Main/Select/Select.module.scss
+++ b/src/pages/HomePage/Main/Select/Select.module.scss
@@ -1,4 +1,5 @@
 @use '../../../../styles/style' as *;
+@import '/src/styles/theme/breakpoints.scss';
 .wrapper {
   width: 634px;
   background-color: $color-white;
@@ -7,6 +8,9 @@
   padding: 20px;
   position: relative;
   z-index: 100;
+  @include mobile {
+    width: 100%;
+  }
 }
 
 .select_block {
