--- a/src/pages/HomePage/Posts/Post.module.scss
+++ b/src/pages/HomePage/Posts/Post.module.scss
@@ -10,6 +10,9 @@
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  @include mobile-tablet {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 .title {
   font-weight: $fw-bold;
@@ -20,9 +23,15 @@
 .post {
   display: flex;
   border-top: #9c9ea1 dashed 1px;
-  padding-top: 43px;
-  padding-bottom: 43px;
+  padding: 43px 0;
   align-items: center;
+  @include mobile-laptop {
+    padding: 33px 10px;
+  }
+  @include mobile {
+    padding: 33px 20px;
+    flex-direction: column;
+  }
 }
 
 .postTitle {
@@ -34,6 +43,15 @@
   margin-left: auto;
   margin-right: 24px;
   padding-left: 15px;
+  @include mobile-tablet {
+    margin: 0;
+    padding: 81px 0;
+    max-width: 100vw;
+    justify-self: center;
+  }
+  @include mobile {
+    padding: 81px 20px 0;
+  }
 }
 .rightWrapper {
   background-color: $color-light-grey;
@@ -44,9 +62,20 @@
   flex-grow: 1;
   align-items: end;
   padding-right: 15px;
+  position: relative;
+  @include mobile-tablet {
+    align-items: center;
+    padding-right: 0;
+  }
 }
 .right {
   max-width: 542px;
+  @include mobile {
+    max-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
 }
 
 .subtitle {
@@ -72,6 +101,9 @@
   font-weight: $fw-regular;
   font-size: 12px;
   color: #9c9ea1;
+  @include mobile {
+    padding-bottom: 5px;
+  }
 }
 
 .image {
@@ -92,4 +124,8 @@
   height: 40px;
   cursor: pointer;
   margin-left: 435px;
+  @include mobile {
+    margin-left: 0;
+    margin-right: 20px;
+  }
 }
