--- a/src/pages/HomePage/SelectedType/SelectedType.module.scss
+++ b/src/pages/HomePage/SelectedType/SelectedType.module.scss
@@ -10,6 +10,9 @@
   position: relative;
   padding: 0 100px;
   max-width: 1360px;
+  @include mobile {
+    padding: 0 20px;
+  }
 }
 
 .selectType_title {
