--- a/src/features/DestinationIntro/DestinationIntro.module.scss
+++ b/src/features/DestinationIntro/DestinationIntro.module.scss
@@ -1,4 +1,5 @@
 @use 'styles/style' as *;
+@import '/src/styles/theme/breakpoints.scss';
 
 .intro {
   background-color: $color-light-grey;
@@ -9,11 +10,31 @@
   box-shadow: $color-box-shadow;
   position: relative;
   z-index: 2;
+
+  @include laptop {
+    margin-top: 100px;
+  }
+
+  @include mobile-tablet {
+    margin-top: 0;
+    flex-direction: column;
+  }
 }
+
 .introLeftContainer {
   width: 65%;
   padding: 56px;
+
+  @include laptop {
+    padding: 40px;
+  }
+
+  @include mobile-tablet {
+    width: 100%;
+    padding: 25px;
+  }
 }
+
 .address {
   font-size: 16px;
   font-weight: $fw-regular;
@@ -21,12 +42,18 @@
   color: $color-laros-dark-grey;
   margin-top: 17px;
 }
+
 .name {
   font-size: 48px;
   font-weight: $fw-bold;
   line-height: 58px;
   margin-top: 8px;
   color: $color-bg-black;
+
+  @include mobile-tablet {
+    font-size: 30px;
+    margin-top: 0;
+  }
 }
 
 .description {
@@ -41,13 +68,28 @@
     height: 8px;
     width: 10px;
   }
+
   &::-webkit-scrollbar-track {
     background: $color-modal-header;
   }
+
   &::-webkit-scrollbar-thumb {
     background-color: $color-laros-dark-grey;
     border-radius: 24px;
     border: 1px solid $color-light-grey;
+  }
+
+  @include mobile-tablet {
+    margin: 0;
+    height: unset;
+    max-height: 200px;
+    padding-right: 10px;
+    font-size: 14px;
+
+    &::-webkit-scrollbar {
+      height: 8px;
+      width: 5px;
+    }
   }
 }
 
@@ -61,11 +103,17 @@
   margin-top: 12px;
   margin-bottom: 16px;
 }
+
 .introRightContainer {
   border-radius: 0 16px 16px 0;
   width: 40%;
   overflow: hidden;
+
+  @include mobile-tablet {
+    width: 100%;
+  }
 }
+
 .tagsTitle {
   font-size: 12px;
   font-weight: $fw-bold;
@@ -73,10 +121,16 @@
   text-align: left;
   margin: 36px 0 12px 10px;
 }
+
 .tagPanel {
   display: flex;
   flex-wrap: wrap;
 }
+
 .tag {
   margin: 0 8px 18px 0;
+
+  @include mobile-tablet {
+    margin-right: 0;
+  }
 }
