--- a/src/features/TripCard/TripCard.module.scss
+++ b/src/features/TripCard/TripCard.module.scss
@@ -9,13 +9,19 @@
   box-shadow: $color-box-shadow_2;
   overflow: hidden;
   height: 100%;
+
+  @include mobile-laptop {
+    width: 400px;
+  }
 }
+
 // card header
 .header {
   height: 300px;
   background-color: $color-about-tabs;
   position: relative;
 }
+
 .sale {
   position: absolute;
   top: 12px;
@@ -33,12 +39,15 @@
   display: flex;
   flex-direction: column;
 }
+
 .mainWrap {
   flex-grow: 1;
 }
+
 .mainContainer {
   width: 60%;
 }
+
 .mainContainer2 {
   width: 39%;
 }
@@ -59,6 +68,7 @@
   display: flex;
   justify-content: space-between;
 }
+
 .name {
   font-size: 20px;
   font-weight: $fw-bold;
@@ -67,11 +77,12 @@
   color: $color-dark-blue;
   margin: 4px 0;
 }
+
 .price {
   font-size: 20px;
   font-weight: $fw-semibold;
   line-height: 24px;
-  letter-spacing: 0em;
+  letter-spacing: 0;
   text-align: left;
   color: $color-dark-blue;
   margin: 4px 0;
@@ -83,6 +94,7 @@
   align-items: center;
   flex-grow: 1;
 }
+
 .tag {
   margin-right: 8px;
 }
@@ -92,6 +104,7 @@
   height: 48px;
   width: 100%;
 }
+
 .footerButton {
   width: 100%;
   height: 100%;
