--- a/src/pages/DestinationInfoPage/DestinationInfoPage.module.scss
+++ b/src/pages/DestinationInfoPage/DestinationInfoPage.module.scss
@@ -1,3 +1,5 @@
+@import '/src/styles/theme/breakpoints.scss';
+
 .destinationPage {
   padding-top: 80px;
 }
@@ -20,5 +22,9 @@
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
     left: 0;
     right: 0;
+  }
+
+  @include mobile-tablet {
+    height: 400px;
   }
 }
