adaptive of destination areas

--- a/src/features/DestinationMaps/Cyrpus/Cyrpus.module.scss
+++ b/src/features/DestinationMaps/Cyrpus/Cyrpus.module.scss
@@ -3,10 +3,26 @@
 .container {
   position: relative;
   margin-top: 50px;
-  background: url('../../../../public/assets/images/destinations/Cyrpus/Cyrpus.png')
-    center;
+  background: url('../../../../public/assets/images/destinations/Cyrpus/Cyrpus.png') center;
   width: 832px;
   height: 488px;
+}
+
+@media screen and (max-width:1350px) {
+  .container {
+    transform: scale(.7);
+  }
+}
+
+@media screen and (max-width:768px) {
+  .container {
+    transform: scale(.7);
+  }
+}
+@media screen and (max-width:425px) {
+  .container {
+    transform: scale(.3);
+  }
 }
 
 // Location
