--- a/src/pages/DestinationWorldwidePage/DestinationWorldwidePage.module.scss
+++ b/src/pages/DestinationWorldwidePage/DestinationWorldwidePage.module.scss
@@ -9,6 +9,7 @@
   margin-top: -55px;
 }
 
+
 .layoutWrapper {
   max-width: 1280px;
   box-shadow: 0 4px 12px rgba(27, 36, 45, 0.15);
@@ -59,4 +60,29 @@
 .packageBtn {
   width: 200px;
   background-color: $color-blue;
+}
+
+@media (max-width:768px) {
+  .content {
+    position: static;
+    width: 100%;
+  }
+
+  .container {
+    width: 100%;
+    margin-top: 0;
+    height: auto;
+    padding: 30px 15px;
+  }
+
+  .title {
+    font-size: 35px;
+  }
+}
+
+@media (max-width:425px) {
+  .actions {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
