--- a/src/features/AreasOf/AreasOf.module.scss
+++ b/src/features/AreasOf/AreasOf.module.scss
@@ -2,6 +2,9 @@
 
 .wrapper {
   color: $color-dark-blue;
+  @include mobile-tablet{
+    padding: 80px 20px !important;
+  }
 }
 .title {
   font-size: 16px;
