--- a/src/features/DestinationMaps/Macedonia/Macedonia.module.scss
+++ b/src/features/DestinationMaps/Macedonia/Macedonia.module.scss
@@ -4,9 +4,26 @@
   position: relative;
   width: 1040px;
   height: 720px;
-  background: url('../../../../public/assets/images/destinations/Macedonia/Macedonia.png')
-    no-repeat center;
+  background: url('../../../../public/assets/images/destinations/Macedonia/Macedonia.png') no-repeat center;
   font-weight: $fw-semibold;
+}
+
+@media screen and (max-width:1350px) {
+  .container {
+    transform: scale(.7);
+  }
+}
+
+@media screen and (max-width:768px) {
+  .container {
+    transform: scale(.7);
+  }
+}
+@media screen and (max-width:425px) {
+  .container{
+    transform: scale(.3);
+height:400px;
+  }
 }
 
 .lake {
@@ -31,14 +48,14 @@
 
 
 .prespes {
-   &::after {
-     content: '';
-     display: block;
-     margin: 2px auto;
-     background: url('../../../../public/assets/images/destinations/lake.svg') no-repeat center;
-     height: 16px;
-   }
- }
+  &::after {
+    content: '';
+    display: block;
+    margin: 2px auto;
+    background: url('../../../../public/assets/images/destinations/lake.svg') no-repeat center;
+    height: 16px;
+  }
+}
 
 .prespesLocation {
   position: absolute;
