--- a/src/features/DestinationHotels/DestinationHotels.module.scss
+++ b/src/features/DestinationHotels/DestinationHotels.module.scss
@@ -19,6 +19,7 @@
   grid-template-columns: 32% 32% 32%;
   gap: 25px;
 }
+
 .loading {
   padding: 50px 0 0;
   text-align: center;
@@ -27,4 +28,26 @@
 .button {
   display: block;
   margin: 0 auto;
+}
+
+@media screen and (max-width:1024px) {
+  .hotels {
+    grid-template-columns: 1fr 1fr;
+    margin: auto;
+    margin-top: 30px;
+  }
+
+  .container {
+    padding: 80px 15px;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width:768px) {
+  .hotels {
+    grid-template-columns: 1fr;
+    margin: auto;
+    margin-top: 30px;
+  }
 }
