--- a/src/features/DestinationHotels/Sorting/Sorting.module.scss
+++ b/src/features/DestinationHotels/Sorting/Sorting.module.scss
@@ -26,10 +26,12 @@
     &::-webkit-scrollbar {
       height: 5px;
     }
+
     &::-webkit-scrollbar-track {
       background: $color-layout-light-blue;
       border-radius: 2px;
     }
+
     &::-webkit-scrollbar-thumb {
       background-color: $color-layout-light-blue-2;
       border-radius: 24px;
@@ -75,6 +77,7 @@
     font-weight: $fw-medium;
     padding-bottom: 4px;
   }
+
   .tag {
     padding-top: 4px;
   }
@@ -113,5 +116,33 @@
   .selectDirection {
     width: 86px;
     background-color: $color-white;
+  }
+}
+
+@media screen and (max-width:768px) {
+  .services {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .accommodationSelect {
+    max-width: none;
+  }
+
+  .sorting {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media screen and (max-width:425px) {
+  .tags{
+    width: 100%;
+    flex-direction: column;
+  }
+  .price{
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
   }
 }
