--- a/src/components/SliderGalery/SliderGalery.module.scss
+++ b/src/components/SliderGalery/SliderGalery.module.scss
@@ -15,6 +15,10 @@
     align-items: center;
   }
 
+  @include laptop {
+    overflow: hidden;
+  }
+
   @include mobile-tablet {
     padding: 0;
   }
