--- a/src/features/AreasOf/AreasOf.module.scss
+++ b/src/features/AreasOf/AreasOf.module.scss
@@ -1,4 +1,5 @@
 @use 'styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
 
 .wrapper {
   color: $color-dark-blue;
@@ -6,12 +7,14 @@
     padding: 80px 20px !important;
   }
 }
+
 .title {
   font-size: 16px;
   font-weight: $fw-bold;
   line-height: 20px;
   text-align: left;
 }
+
 .description {
   font-size: 12px;
   font-weight: $fw-regular;
@@ -19,11 +22,20 @@
   text-align: left;
   margin-top: 8px;
 }
+
 .images {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
   margin-top: 40px;
+
+  @include mobile {
+    flex-direction: column;
+  }
+
+  @include tablet {
+    justify-content: center;
+  }
 }
 
 .name {
