--- a/src/features/Header/Header.module.scss
+++ b/src/features/Header/Header.module.scss
@@ -46,6 +46,10 @@
 
 .navItem:not(:last-child) {
   margin-right: 55px;
+
+  @include tablet {
+    margin-right: 30px;
+  }
 }
 
 .navLink {
@@ -82,6 +86,10 @@
   div {
     font-weight: 800;
     color: #fafbfc;
+  }
+
+  @include tablet {
+    margin-left: 20px;
   }
 }
 
