fix: adaptive slider in areas

--- a/src/pages/DestinationInfoPage/Trips/Trips.module.scss
+++ b/src/pages/DestinationInfoPage/Trips/Trips.module.scss
@@ -4,7 +4,7 @@
 .trips {
   padding: 80px 0;
 
-  @include tablet-desktop {
+  @include tablet {
     padding: 0 30px;
   }
 
@@ -43,7 +43,7 @@
   margin: 0 150px;
 }
 
-@include mobile-laptop {
+@include mobile-tablet {
   .slider {
     margin: 0;
 
@@ -62,14 +62,30 @@
   }
 }
 
-@include laptop {
+@include tablet {
   .slider {
+    margin: 0 7%;
+
     [class*='swiperButtonNext'] {
       right: -15px;
     }
 
     [class*='swiperButtonPrev'] {
       left: -15px;
+    }
+  }
+}
+
+@include laptop {
+  .slider {
+    margin: 0 8%;
+
+    [class*='swiperButtonNext'] {
+      right: -40px;
+    }
+
+    [class*='swiperButtonPrev'] {
+      left: -40px;
     }
   }
 }
